<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/drawerLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="start"
	android:background="@color/white"
	android:fitsSystemWindows="true"
	android:orientation="vertical"
	android:visibility="visible">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/margin_50">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginTop="@dimen/margin_15">

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ImageView
					android:id="@+id/nav_back"
					android:layout_margin="@dimen/margin_15"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@mipmap/back_arrow_white"/>

				<de.hdodenhof.circleimageview.CircleImageView
					xmlns:app="http://schemas.android.com/apk/res-auto"
					android:id="@+id/profile_image"
					android:layout_width="96dp"
					android:layout_height="96dp"
					android:layout_alignParentTop="true"
					android:layout_centerHorizontal="true"
					android:src="@mipmap/signup_backgriund"
					android:visibility="visible"
					app:civ_border_color="#628854"
					app:civ_border_width="3dp"/>

				<LinearLayout
					android:id="@+id/nav_setting"
					android:layout_width="@dimen/margin_50"
					android:layout_height="@dimen/margin_50"
					android:layout_alignParentEnd="true"
					android:layout_alignParentTop="true"
					android:gravity="center">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:background="@mipmap/setting"
						/>
				</LinearLayout>

				<TextView
					android:id="@+id/username"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/profile_image"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="@dimen/margin_10"
					android:text="SHANKAR KUMAR"
					android:textColor="@color/black"
					android:textSize="@dimen/margin_14"
					android:visibility="visible"/>



				<TextView
					android:id="@+id/info"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/username"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="@dimen/margin_15"
					android:text="@string/myinformation"
					android:textColor="#AFAEAF"
					android:textSize="@dimen/margin_15"/>

				<View
					android:id="@+id/view_top"
					android:layout_width="match_parent"
					android:layout_height="0.3dp"
					android:layout_below="@+id/info"
					android:layout_marginBottom="@dimen/margin_15"
					android:layout_marginLeft="@dimen/margin_30"
					android:layout_marginRight="@dimen/margin_30"
					android:layout_marginTop="@dimen/margin_15"
					android:background="@color/white"
					/>

				<TextView
					android:id="@+id/myaddress"
					android:layout_width="wrap_content"
					android:layout_height="@dimen/margin_40"
					android:layout_below="@+id/view_top"
					android:layout_centerHorizontal="true"
					android:drawableLeft="@mipmap/my_address_icon"
					android:drawablePadding="@dimen/margin_5"
					android:gravity="center"
					android:text="@string/myaddress"
					android:textColor="@color/text_black"
					android:textSize="@dimen/margin_14"/>

				<TextView
					android:id="@+id/myorder"
					android:layout_width="wrap_content"
					android:layout_height="@dimen/margin_40"
					android:layout_alignStart="@+id/myaddress"
					android:layout_below="@+id/myaddress"
					android:drawableLeft="@mipmap/my_order_icon"
					android:drawablePadding="@dimen/margin_5"
					android:gravity="center"
					android:text="@string/myorder"
					android:textColor="@color/text_black"
					android:textSize="@dimen/margin_14"/>

				<TextView
					android:id="@+id/mycart"
					android:layout_width="wrap_content"
					android:layout_height="@dimen/margin_40"
					android:layout_alignStart="@+id/myorder"
					android:layout_below="@+id/myorder"
					android:drawableLeft="@mipmap/my_cart_icon"
					android:drawablePadding="@dimen/margin_5"
					android:gravity="center"
					android:text="@string/mycart"
					android:textColor="@color/text_black"
					android:textSize="@dimen/margin_14"/>

				<TextView
					android:id="@+id/others"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_below="@+id/mycart"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="16dp"
					android:text="@string/others"
					android:textColor="#AFAEAF"
					android:textSize="@dimen/text_15"/>

				<View
					android:id="@+id/view"
					android:layout_width="match_parent"
					android:layout_height="0.5dp"
					android:layout_below="@+id/others"
					android:layout_marginBottom="@dimen/margin_15"
					android:layout_marginLeft="@dimen/margin_30"
					android:layout_marginRight="@dimen/margin_30"
					android:layout_marginTop="@dimen/margin_15"
					android:background="@color/text_black"
					/>

				<TextView
					android:id="@+id/contactus"
					android:layout_width="wrap_content"
					android:layout_height="@dimen/margin_40"
					android:layout_alignStart="@+id/myorder"
					android:layout_below="@+id/view"
					android:drawableLeft="@mipmap/contact_us_icon"
					android:drawablePadding="@dimen/margin_5"
					android:gravity="center"
					android:text="@string/contactus"
					android:textColor="@color/text_black"
					android:textSize="@dimen/margin_14"/>

				<TextView
					android:id="@+id/aboutus"
					android:layout_width="wrap_content"
					android:layout_height="@dimen/margin_40"
					android:layout_alignStart="@+id/contactus"
					android:layout_below="@+id/contactus"
					android:drawableLeft="@mipmap/about_us_icon"
					android:drawablePadding="@dimen/margin_5"
					android:gravity="center"
					android:text="@string/aboutus"
					android:textColor="@color/text_black"
					android:textSize="@dimen/margin_14"/>
			</RelativeLayout>
		</LinearLayout>
	</ScrollView>

	<TextView
		android:id="@+id/rateus"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/margin_50"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true"
		android:layout_marginStart="15dp"
		android:gravity="center"
		android:text="@string/rateus"
		android:textColor="@color/text_black"
		android:textSize="@dimen/text_14"
		android:textStyle="normal"/>

	<TextView
		android:id="@+id/logout"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/margin_50"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:layout_marginEnd="15dp"
		android:gravity="center"
		android:text="@string/logout"
		android:textColor="@color/text_black"
		android:textSize="@dimen/text_14"
		android:textStyle="normal"/>
</RelativeLayout>