<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		app:popupTheme="@style/AppTheme.PopupOverlay">


		<TextView
			android:id="@+id/toolbartext"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center"
			android:textAllCaps="true"
			android:maxLines="1"
			android:ellipsize="end"
			android:layout_marginRight="@dimen/margin_40"
			android:textColor="@color/text_black"
			android:textSize="@dimen/text_14"
			android:textStyle="normal"/>

	</android.support.v7.widget.Toolbar>
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/toolbar">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">
			<ImageView
				android:layout_width="@dimen/margin_150"
				android:layout_height="@dimen/margin_150"
				android:background="@mipmap/logo"
				android:layout_margin="@dimen/margin_20"/>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textSize="@dimen/text_14"
				android:layout_margin="@dimen/margin_15"
				android:gravity="center"
				android:text="@string/contactucdesc"/>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/margin_50"
		android:layout_alignParentBottom="true"
		android:orientation="horizontal">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight=".5"
			android:text="@string/rateus"
			android:gravity="center_vertical"
			android:textSize="@dimen/margin_15"
			android:layout_marginLeft="@dimen/margin_15"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight=".5"
			android:text="@string/logout"
			android:gravity="center|right"
			android:textSize="@dimen/margin_15"
			android:layout_marginRight="@dimen/margin_15"/>
	</LinearLayout>
</RelativeLayout>