<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/coordinatorLayout">

<RelativeLayout
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/app_back">
	<include
		android:id="@+id/top"
		layout="@layout/toolbar"/>
<android.support.v7.widget.RecyclerView
	android:id="@+id/rec_cartlist"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_below="@+id/top"
	android:visibility="visible"
	android:paddingBottom="@dimen/margin_70"/>
	<RelativeLayout
		android:id="@+id/myordershow"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:visibility="gone"
		android:layout_below="@+id/top">
		<LinearLayout
			android:layout_width="200dp"
			android:layout_height="200dp"
			android:layout_marginTop="49dp"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:gravity="center"
			android:id="@+id/linearLayout2">

			<ImageView
				android:layout_width="150dp"
				android:layout_height="150dp"
				android:background="@mipmap/empty_cart"/>
		</LinearLayout>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/emptycart"
			android:layout_below="@+id/linearLayout2"
			android:layout_alignParentStart="true"
			android:layout_marginTop="39dp"
			android:gravity="center"
			android:textColor="@color/nofound"
			android:id="@+id/textView2"/>
		<TextView
			android:id="@+id/ordernow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/additemsnow"
			android:background="@drawable/ordernow"
			android:paddingLeft="@dimen/margin_15"
			android:paddingRight="@dimen/margin_15"
			android:paddingTop="@dimen/margin_10"
			android:paddingBottom="@dimen/margin_10"
			android:layout_below="@+id/textView2"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="30dp"
			android:textColor="@color/white"
			android:textStyle="normal"
			android:textSize="@dimen/text_16"/>

	</RelativeLayout>
	<android.support.v7.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">
	<LinearLayout
		android:id="@+id/checkout"
		android:layout_width="match_parent"
		android:layout_height="@dimen/margin_50"
		android:background="@color/otp_button_color"
		android:layout_margin="@dimen/margin_10"
		android:orientation="horizontal"
		android:visibility="gone">
		<TextView
			android:id="@+id/checkouttext"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight=".5"
			android:text="@string/checkout"
			android:gravity="center"
			android:textColor="@color/white"
			android:textSize="@dimen/text_18"
			android:layout_marginLeft="@dimen/margin_15"/>
		<TextView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight=".8"
			android:text=":"
			android:textSize="@dimen/text_20"
			android:textColor="@color/white"
			android:gravity="center"/>
		<TextView
			android:id="@+id/checkoutprice"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight=".5"
			android:text=""
			android:gravity="center"
			android:textColor="@color/white"
			android:textSize="@dimen/text_17"
			android:layout_marginRight="@dimen/margin_15"/>

	</LinearLayout>
	</android.support.v7.widget.CardView>
</RelativeLayout>
	</android.support.design.widget.CoordinatorLayout>