<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/app_back">
<android.support.v7.widget.CardView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="@dimen/margin_7"
	android:layout_marginLeft="@dimen/margin_7"
	android:layout_marginRight="@dimen/margin_7"
	android:layout_marginBottom="@dimen/margin_4">
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginTop="@dimen/margin_7"
		android:layout_marginRight="@dimen/margin_10"
		android:layout_marginBottom="@dimen/margin_7"
		android:layout_marginLeft="@dimen/margin_15">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/address"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:text="@string/address"
				android:textColor="@color/colorPrimary"
				android:textSize="@dimen/text_16"
				android:textStyle="normal"/>
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight=".5"
				android:gravity="center|right">
				<CheckBox
					android:id="@+id/checkbox"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"/>
			</LinearLayout>
		</LinearLayout>
		<View
			android:layout_width="match_parent"
			android:layout_height="0.3dp"
			android:background="@color/text_light_black_color"/>
<TextView
	android:id="@+id/addresstype"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:text="Office"
	android:textSize="@dimen/text_14"
	android:textStyle="normal"
	android:textColor="@color/text_light_black_color"
	android:layout_marginTop="@dimen/margin_7"/>
		<TextView
			android:id="@+id/addressdesc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="fdfnimjrsmg "
			android:textColor="@color/text_light_black_color"
			android:textStyle="normal"
			android:textSize="@dimen/text_14"
			android:layout_marginTop="@dimen/margin_5"/>
	</LinearLayout>
</android.support.v7.widget.CardView>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginLeft="@dimen/margin_10"
		android:layout_marginRight="@dimen/margin_10"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight=".5">
			<android.support.v7.widget.CardView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView
					android:id="@+id/edit"
					android:layout_width="100dp"
					android:layout_height="@dimen/margin_40"
					android:text="@string/edit"
					android:textSize="@dimen/text_15"
					android:textStyle="normal"
					android:gravity="center"
					android:textColor="@color/otp_button_color"/>
			</android.support.v7.widget.CardView>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight=".5"
			android:gravity="right">
			<android.support.v7.widget.CardView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">
				<TextView
					android:id="@+id/delete"
					android:layout_width="100dp"
					android:layout_height="@dimen/margin_40"
					android:text="@string/delete"
					android:textSize="@dimen/text_15"
					android:textStyle="normal"
					android:gravity="center"
					android:textColor="@color/colorPrimary"/>
			</android.support.v7.widget.CardView>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>